--- a/style.css
+++ b/style.css
@@ -1,26 +1,24 @@
 /* basic styling for modals hidden in html that pop up if errors - not final styling, just needed the modal to be able to pop up and be legible */
 #modal-empty {
-    display: none; /* Hidden by default */
-    position: fixed; /* Stay in place */
+    display: none; /* Hidden by default, js will trigger it to show */
+    position: fixed; /* Stays in place */
     z-index: 1; /* Stays on top of page */
     left: 25%;
     top: 10%;
     width: 500px;
     height: 200px;
-    overflow: auto; /* Enable scroll if needed */
     background-color: rgb(202, 111, 111); 
     padding: 5px;
 }
 
 #modal-invalid {
-    display: none; /* Hidden by default */
-    position: fixed; /* Stay in place */
+    display: none; /* Hidden by default, js will trigger it to show */
+    position: fixed; /* Stays in place */
     z-index: 1; /* Stays on top of page */
     left: 25%;
     top: 10%;
     width: 500px;
     height: 200px;
-    overflow: auto; /* Enable scroll if needed */
     background-color: rgb(202, 111, 111); 
     padding: 5px;
 }
@@ -32,4 +30,10 @@
 
 .close {
     cursor: pointer;
+}
+
+/* style the autofill drop down */
+.ui-autocomplete,
+.ui-menu-item {
+    background-color: white;
 }
