--- a/style.css
+++ b/style.css
@@ -35,7 +35,7 @@ body {
     margin-top: 20px;
 }
 
-/* basic styling for modals hidden in html that pop up if errors - not final styling, just needed the modal to be able to pop up and be legible */
+/* MB - hidden modals to display upon certain actions in javascript file */
 #modal-empty {
     display: none; /* Hidden by default, js will trigger it to show */
     position: fixed; /* Stays in place */
