--- a/style.css
+++ b/style.css
@@ -6,15 +6,16 @@ body {
     background-color: khaki;
 }
 
-.display {
+.display, #logic-output, .currencyExchange {
     border: 1px solid black;
     padding: 10px;
     margin-top: 20px;
 }
 
-.display h1, .display h2 {
+.display h1, .display h2, #logic-output h2, .currencyExchange h2 {
     margin-top: 0;
     color: black;
+    margin-left: 5px;
 }
 
 /* Navbar styles */
@@ -86,6 +87,7 @@ body {
 .ui-menu-item {
     background-color: white;
     cursor: pointer;
+    width: 100px;
 }
 /* Input styles */
 .input {
@@ -95,6 +97,7 @@ body {
 
 .userInput {
     padding: 5px;
+    margin: 5px;
 }
 .button {
     padding: 5px 10px;
@@ -117,6 +120,7 @@ body {
 }
 
 .currencyExchange h2 {
+    text-align: left;
     margin: 0;
 }
 
@@ -166,4 +170,14 @@ body {
 
 #badCard {
     display: none;
+}
+
+#tempChoices {
+    margin: 5px;
+    text-align: center;
+}
+
+#set-temps {
+    text-align: center;
+    margin-bottom: 10px;
 }
