--- a/style.css
+++ b/style.css
@@ -3,31 +3,46 @@ body {
     font-family: Arial, sans-serif;
     margin: 0;
     padding: 0;
-    background-color: khaki;
+    display: flex;
+    flex-direction: column;
+    min-height: 100vh;
+  background: linear-gradient(#3453C4, #f9B612);  
+  position:relative;
+  z-index:0;
+ 
+}
+
+
+.content{
+    flex-basis: 50%;
 }
 
 .display, #logic-output, .currencyExchange {
-    border: 1px solid black;
-    padding: 10px;
+    /* border: 1px solid black; */
+    padding: 20px;
     margin-top: 20px;
 }
 
 .display h1, .display h2, #logic-output h2, .currencyExchange h2 {
     margin-top: 0;
-    color: black;
     margin-left: 5px;
+    padding: 2em;
+    color: black;
 }
 
 /* Navbar styles */
 .navbar {
     background-image: url(https://images.unsplash.com/photo-1502920514313-52581002a659?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxzZWFyY2h8M3x8dHJhdmVsJTIwbWFwfGVufDB8fDB8fHww&auto=format&fit=crop&w=500&q=60);
-    background-color: #333;
-    color: #fff;
     padding: 10px;
     text-align: center;
 }
-.navbar h1 {
-    margin: 0;
+
+.instructions{
+    text-align: center;
+}
+
+.tempChoices{
+    font-weight: bold;
 }
 
 /* City tabs styles */
@@ -35,6 +50,11 @@ body {
     text-align: center;
     margin-top: 20px;
 }
+
+p {
+    font-weight: bold;
+}
+
 
 /* MB - hidden modals to display upon certain actions in javascript file */
 #modal-empty {
@@ -91,25 +111,30 @@ body {
 }
 /* Input styles */
 .input {
-    /* text-align: center; */
     margin-top: 20px;
 }
 
 .userInput {
     padding: 5px;
     margin: 5px;
+    
 }
+
+#cityInput{
+    width: 25%;
+    justify-content: center;
+    left: 45em;
+}
+
 .button {
     padding: 5px 10px;
     margin: 3px;
-    background-color: #333;
-    color: #fff;
     border: none;
     cursor: pointer;
 }
 
 .button a {
-    color: #fff;
+    
     text-decoration: none;
 }
 
